# omni-core

./: .gitignore  GUIA_INSTALACION_SIMPLE_GITHUB.md  GUIA_POWERSHELL_WINDOWS.md  MIGRATION_GUIDE.md  README.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  package.json
home_snapshot/ubuntu/eco-nova/: CLAUDE.md  ECO_NOVA_SPEC.md  SOUL.md  eco  eco-nova-cli.py  pyproject.toml
home_snapshot/ubuntu/eco-nova/docs/: mega-agent-plan.md
home_snapshot/ubuntu/eco-nova/skills/: n8n_skills.py
home_snapshot/ubuntu/eco-nova/tests/: test_config.py  test_layout.py  test_router.py  test_telegram_policy.py
home_snapshot/ubuntu/nova-os/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  Nova.ps1  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  integrations.py  n8n_nova_node.json  nova.py  nova_bridge.py  nova_core.py  nova_core_requirements.txt  nova_demo.py  nova_failsafe_pipeline.py  nova_init_enhancement.py  nova_pro.py  nova_prompt_refiner.py  nova_prompt_stack.py  nova_saas.py  nova_scanner.py  pyproject.toml  requirements.txt  setup_server.sh  skill_executor.py  test_list.py  test_list_all.py
home_snapshot/ubuntu/nova-os/backend/: main.py  nova.db.bak_20260327_013727  nova.py  requirements.txt
home_snapshot/ubuntu/nova-os/data/: seed-config.txt
home_snapshot/ubuntu/nova-os/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
home_snapshot/ubuntu/nova-os/docs/: api-reference.md  architecture.md  contributing.md  deployment.md
home_snapshot/ubuntu/nova-os/frontend/: Dockerfile  eslint.config.js  index.html  (+5 more)
(+719 files in other folders)
