[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-nova"
version = "0.1.0"
description = "Eco Nova control plane CLI"
requires-python = ">=3.11"
dependencies = ["rich>=13.0.0"]

[project.scripts]
eco = "eco_nova.cli:main"
econova = "eco_nova.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
