[project]
name = "nova-os"
version = "4.0.0"
description = "AI Governance & Control Platform"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
